--- a/music_controller/frontend/static/css/index.css
+++ b/music_controller/frontend/static/css/index.css
@@ -11,11 +11,16 @@ body {
   height: 100%;
   left: 0;
   top: 0;
-  color: black;
 }
 
 #app {
   width: 100%;
   height: 100%;
-  display: flex;
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
